--- a/src/components/DocumentViewer/DocumentViewer.scss
+++ b/src/components/DocumentViewer/DocumentViewer.scss
@@ -1,6 +1,4 @@
 .document-viewer {
-  padding: 20px;
-  max-width: 800px;
   margin: 0 auto;
   
   .document-content {
@@ -29,7 +27,7 @@
     }
     
     p {
-      margin: 0.5em 0;
+      //margin: 0.5em 0;
     }
     
     img {
